* Fri Mar 02 2007 Jesse Keating <jkeating@redhat.com>
- Add kickstart %packages syntax support to package manifest
- Make the list we hand off to yum to search for as unique as we can

* Wed Feb 28 2007 Jesse Keating <jkeating@redhat.com>
- Update Fedora 7 comps file.
- Tag for F7 Test2

* Mon Feb 26 2007 Jesse Keating <jkeating@redhat.com>
- Fix gathering of srpms (thanks skvidal)

* Wed Feb 21 2007 Jesse Keating <jkeating@redhat.com>
- Don't use TMPDIR with buildinstall for now

* Fri Feb 16 2007 Jesse Keating <jkeating@redhat.com>
- Make use of anaconda's TMPDIR support
- Put yum tempdirs in the workdir
- Add a version option to cli arguments
- Make cdsize a config option

* Thu Feb 15 2007 Jesse Keating <jkeating@redhat.com>
- Various logging tweaks
- Use -d flag in createrepo for sqlite blobs
- Add pydoc stuff to various functions
- Support comments in the package manifest

* Wed Feb 14 2007 Jesse Keating <jkeating@redhat.com>
- Add logging patch from jbowes

* Tue Feb 13 2007 Jesse Keating <jkeating@redhat.com>
- Fix part of the patch from Essien
- Add Contributors to the Authors file
- Adjust the Makefile so that srpm doesn't cause a tag
- Merged changes from Will Woods
  - Write out some tree description files
  - Don't traceback on existing files in download area (not sure this will stay)
- Style fixed some stuff from Will

* Mon Feb 12 2007 Jesse Keating <jkeating@redhat.com>
- Add new Make targets (Essien Ita Essien)
- Add runtime flags for doing specific stages of the compose (Essien Ita Essien)
- Add ability to define destdir on the cli to override conf file
- Clean up optionparse stuff, print usage if arg list is too small

* Thu Feb 08 2007 Jesse Keating <jkeating@redhat.com>
- Add support for globbing in manifest

* Tue Feb 06 2007 Jesse Keating <jkeating@redhat.com>
- yum bestPackagesFromList takes an arch argument. Fixes ppc64 bug
- Don't use 'returnSimple' anymore, deprecated in yum api
- Speed up depsolving a bit by tracking solved deps
